--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/AppPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/AppPage.html
@@ -256,7 +256,7 @@
       <!--main content end-->
     </section>
 
-	<wicket:container wicket:id="googleanalytics"/>
+	<!-- wicket:container wicket:id="googleanalytics"/-->
 
 </body>
 </html>
