--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -106,7 +106,7 @@ __lc.license = 4370791;
 		<header wicket:id="header"></header>
 		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		<div class="row">
-		<div class="sidebar-categories col-lg-3 row" wicket:id="sidebarColumn">
+		<div class="sidebar-categories col-lg-3" wicket:id="sidebarColumn">
 			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 		</div>
 		<!--/span-->
