--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
@@ -57,31 +57,33 @@ body {
 	<header wicket:id="header"></header>
 	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 	<!--/span-->
-
-	<div wicket:id="afterHeader" class="afterHeader" style="display: none;">
-		<!-- 		Carousel Images is loading.. -->
+	<div class="container">
+		<div wicket:id="afterHeader" class="afterHeader">
+			<!-- 		Carousel Images is loading.. -->
+		</div>
 	</div>
 	<div class="row clearfix f-space30"></div>
-	<div wicket:id="contentColumn">
-		<div class="sidebar-categories" wicket:id="sidebarColumn">
-			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+	<div class="container">
+		<div wicket:id="contentColumn">
+			<div class="sidebar-categories" wicket:id="sidebarColumn">
+				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+			</div>
+			<div wicket:id="addedInfo"></div>
+			<div wicket:id="feedback" class="feedback"></div>
+			<wicket:child>
+				<ol class="featured-products">
+					<div id="featuredProducts">
+						<li><a href="#">Product name</a></li>
+					</div>
+				</ol>
+			</wicket:child>
 		</div>
-		<div wicket:id="addedInfo"></div>
-		<div wicket:id="feedback" class="feedback"></div>
-		<wicket:child>
-			<ol class="featured-products">
-				<div id="featuredProducts">
-					<li><a href="#">Product name</a></li>
-				</div>
-			</ol>
-		</wicket:child>
 	</div>
 	<footer class="footer" wicket:id="footer">
 		<small style="color: #808080;"> &middot; &copy; <a
 			href="http://www.soluvas.com/">Soluvas</a> 2012
 		</small>
 	</footer>
-	<!--/.fluid-container-->
 	<div class="clearfix"></div>
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
