--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -7,6 +7,7 @@
 	lang="id">
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
 
