--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbini.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbini.html
@@ -61,11 +61,11 @@ body {
 	</div>
 	<div class="container">
 		<div class="row">
-		<div class="sidebar-categories col-lg-3" wicket:id="sidebarColumn">
+		<div class="col-sm-3 sidebar" wicket:id="sidebarColumn">
 			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 		</div>
 
-		<div wicket:id="contentColumn" class="content-column col-lg-9">
+		<div wicket:id="contentColumn" class="content-column col-sm-9">
 			<div wicket:id="addedInfo"></div>
 			<div wicket:id="feedback" class="feedback"></div>
 			<wicket:child>
