--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
@@ -32,7 +32,7 @@
 	<!-- not needed -->
 	<div wicket:id="dev" style="display: none;">[DebugBar]</div>
 	<!-- end not needed -->
-	<div class="container-fluid">
+	<div class="container-fluid bg-white">
 		<div class="row">
 		<header wicket:id="header"></header>
 		<div class="navbar-bg"></div>
