--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
@@ -74,15 +74,20 @@
   		<div class="modal-dialog">
 		    <div class="modal-content">
 		      	<div class="modal-header">
-		        	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        	<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+		        	<h4 id="myModalLabel">YOUR CART</h4>
 		      	</div>
 		      	<div class="modal-body">
 		        	...
 		      	</div>
 		      	<div class="modal-footer">
-		        	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		        	<button type="button" class="btn btn-primary">Save changes</button>
+		      		<div class="row">
+		      			<div class="col-md-6 no-padding">
+		        		<button type="button" class="btn btn-default btn-block btn-big" data-dismiss="modal">BACK TO SHOP</button>
+		        		</div>
+		        		<div class="col-md-6 no-padding">
+		        		<button type="button" class="btn btn-default btn-block btn-big">CHECKOUT</button>
+		        		</div>
+		        	</div>
 		      	</div>
 		    </div>
   		</div>
