--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/BreadcrumbBar.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/BreadcrumbBar.html
@@ -1,9 +1,9 @@
 <wicket:panel>
-
-<ul class="breadcrumb">
-	<li wicket:id="crumbs"><a wicket:id="crumbLink"><wicket:container wicket:id="crumbLabel">Home</wicket:container></a> <span class="divider">/</span></li>
-	<!-- 											    <li><a href="#">Brand</a> <span class="divider">/</span></li> -->
-    <li class="active" wicket:id="active">Data</li>
-</ul>
-
+<li itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+	<a wicket:id="homeLink" itemprop="url"><span itemprop="title"><wicket:message key="home">Home</wicket:message></span></a>
+</li>
+<li wicket:id="crumbs" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+	<a wicket:id="link" itemprop="url"><span itemprop="title" wicket:id="title">Categories</span></a>
+</li>
+<li class="active" wicket:id="active" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">Active page title</li>
 </wicket:panel>
