--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -100,13 +100,24 @@ body {
 	</script>
 
 	<script type="text/javascript">
-		var __lc_buttons = __lc_buttons || [];
-		__lc_buttons.push({
-			elementId : 'LiveChat_1376906919',
-			skill : '0'
-		});
+// 		var __lc_buttons = __lc_buttons || [];
+// 		__lc_buttons.push({
+// 			elementId : 'LiveChat_1376906919',
+// 			skill : '0'
+// 		});
 	</script>
-
+	
+	<script type="text/javascript">
+		var __lc = {};
+		__lc.license = 2013831;
+		
+		(function() {
+			var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+			lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+		})();
+	</script>
+	
 	<wicket:container wicket:id="footer-container" />
 
 	<!-- Google Code for Remarketing Tag -->
