--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -56,7 +56,7 @@ body {
 	</div>
 	<div class="container top-md-10">
 		<div class="row">
-			<div class="col-sm-3 col-md-3 col-xs-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
+			<div class="col-sm-3 col-md-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
 			<!--/span-->
