--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
@@ -9,7 +9,7 @@
 					<div class="alert alert-info">
 						Only custom terms (with namespace other than <tt>base</tt>) are editable.
 					</div>
-					<a wicket:id="addLink" href="#" class="btn btn-success"><i class="fa fa-plus"></i> New</a>
+					<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
 					<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
 						[table]
 					</table>
