--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen2.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen2.html
@@ -54,23 +54,25 @@ body {
 	<div wicket:id="afterHeader" class="afterHeader">
 		<!-- 		Carousel Images is loading.. -->
 	</div>
-	<section id="content" class="contentMarginTop">
+	<section id="content" class="contentMarginTop color-scheme-3">
 		<div class="container">
 			<div class="row">
-				<div wicket:id="contentColumn" class="content-column col-sm-12 col-md-12">
-					<div wicket:id="addedInfo"></div>
-					<div wicket:id="feedback" class="feedback"></div>
-					<wicket:child>
-						<ol class="featured-products">
-							<div id="featuredProducts">
-								<li><a href="#">Product name</a></li>
-							</div>
-						</ol>
-				
-					</wicket:child>
-				</div>
-				<div class="sidebar col-xs-12 col-sm-6 col-md-3 col-lg-3 text-center" wicket:id="sidebarColumn">
-					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+				<div class="content-wrapp">
+					<div wicket:id="contentColumn" class="content-column col-sm-12 col-md-12">
+						<div wicket:id="addedInfo"></div>
+						<div wicket:id="feedback" class="feedback"></div>
+						<wicket:child>
+							<ol class="featured-products">
+								<div id="featuredProducts">
+									<li><a href="#">Product name</a></li>
+								</div>
+							</ol>
+					
+						</wicket:child>
+					</div>
+					<div class="sidebar col-xs-12 col-sm-6 col-md-3 col-lg-3 text-center" wicket:id="sidebarColumn">
+						<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+					</div>
 				</div>
 			</div>
 		</div>
